--- a/style.css
+++ b/style.css
@@ -44,11 +44,11 @@
     border-radius: 4cm;
   }
   .button-nav {
-    background-color:whitesmoke;
+    /* background-color:whitesmoke; */
     /* border: none; */
-    border-radius: 8cm;
+    /* border-radius: 8cm; */
     color: whitesmoke;
-        /* padding: 5px 8px; */
+    padding: 5px 8px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
